--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 crossterm = "0.28.1"
 reqwest = { version = "0.12.7", features = ["blocking"] }
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
